Suma de Nuevos Lanzamientos en Index

--- a/index.html
+++ b/index.html
@@ -89,32 +89,45 @@
 
         <section class="ultimosL">
             <h2>ÚLTIMOS LANZAMINETOS</h2>
-            <div class="UltL">
+            <div class="UltL">  
+                <img class="flecha" src="multimedia/icons/flecha.svg" alt="flecha">
                 <div class="cj">
-                    <h4>NUEVO</h4>
+                    <h4 class="new">NUEVO</h4>
+                    <div class="posImg">
                     <img src="multimedia/star-wars/trooper-1.webp" alt="Trooper">
-                    <h4>STAR WARS</h4>
+                    </div>
+                    <div class="info">
+                    <h5 class="gris">STAR WARS</h5>
                     <h4>STORMTROOPER LIGHTSABER</h4>
-                    <h5>$ 1799,99</h5>
-                    <h5>3 CUOTAS SIN INTERÉS</h5>
+                    <h5 class="gris">$ 1799,99</h5>
+                    <h5 class="cuotas">3 CUOTAS SIN INTERÉS</h5>
+                </div>
                 </div>
                 <div class="cj">
-                    <div class="cj">
-                        <h4>NUEVO</h4>
+                        <h4 class="new">NUEVO</h4>
+                        <div class="posImg">
                         <img src="multimedia/pokemon/pidgeotto-1.webp" alt="Pidgrotto">
-                        <h4>POKEMON</h4>
+                        </div>
+                        <div class="info">
+                        <h5 class="gris">POKEMON</h5>
                         <h4>PIDGEOTTO</h4>
-                        <h5>$ 1799,99</h5>
-                        <h5>3 CUOTAS SIN INTERÉS</h5>
+                        <h5 class="gris">$ 1799,99</h5>
+                        <h5 class="cuotas">3 CUOTAS SIN INTERÉS</h5>
+                    </div>
                 </div>
                 <div class="cj">
-                    <h4>NUEVO</h4>
+                    <h4 class="new">NUEVO</h4>
+                    <div class="posImg">
                         <img src="multimedia/harry-potter/luna-1.webp" alt="Pidgrotto">
-                        <h4>HARRY POTTER</h4>
+                    </div>
+                        <div class="info">
+                        <h5 class="gris">HARRY POTTER</h5>
                         <h4>LUNA LOVEGOOD LION MASK</h4>
-                        <h5>$ 1799,99</h5>
-                        <h5>3 CUOTAS SIN INTERÉS</h5>
+                        <h5 class="gris">$ 1799,99</h5>
+                        <h5 class="cuotas">3 CUOTAS SIN INTERÉS</h5>
+                    </div>
                 </div>
+                <img class="flecha" src="multimedia/icons/flecha_derecha.svg" alt="flecha">
             </div>
         </section>
     </main>
