--- a/pages/login.html
+++ b/pages/login.html
@@ -58,11 +58,12 @@
                     <div class="recordar">
                         <input class="submit" type="submit" value="Ingresar">
                         <input type="checkbox" class="check" name="recordar" >
-                        <a href="registrar.html">Olvidé mi contraseña</a>
+                        Recordarme
                     </div>
                     
                 </form> 
-            <h5 class="cuotas">Olvidé mi contraseña</h5>
+                <a href="registrar.html"><h5 class="cuotas">Olvidé mi contraseña</h5></a>
+            
         </div>
     </main>
     <footer>
