--- a/pages/login.html
+++ b/pages/login.html
@@ -12,20 +12,22 @@
         <nav>
             <div class="na">
                 <a href="../index.html"><img src="../multimedia/branding/logo_light_horizontal.svg" alt="Logo Funko Shop"> </a>
-                <ul>
-                    <li>
-                        <a href="shop.html">SHOP</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html"> CONTACTO</a>
-                    </li>
-                    <li>
-                        <a href="login.html">LOGIN</a>
-                    </li>
-                    <li>
-                        <a href="carrito.html"> <img src="../multimedia/icons/cart-icon.svg" alt="Carrito de compras "></a>
-                    </li>
-                </ul>
+                <nav>
+                    <div class="na">
+                        <a href="../index.html"><img src="../multimedia/branding/logo_light_horizontal.svg" alt="Logo Funko Shop"> </a>
+                        <ul>
+                            <li>
+                                <a href="pages/shop.html">VER TIENDA</a>
+                            </li>
+                            <li>
+                                <a href="ADMIN"> ADMIN</a>
+                            </li>
+                            <li>
+                                <a href="../index.html">SALIR</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
         </nav>
     </header>
@@ -70,7 +72,7 @@
         <div class="Fi">
             <div class="foot">
                 <a href="shop.html">SHOP</a>
-                <a href="contacto.html">REGISTRARSE</a>
+                <a href="registrar.html">REGISTRARSE</a>
                 <a href="login.html">INGRESAR</a>
                 <a href="contacto.html">CONTACTO</a>
 
